--- a/src/index.css
+++ b/src/index.css
@@ -1,9 +1,22 @@
+h1{
+  color: blueviolet;
+}
+h1:first-child{
+  color: green;
+  text-decoration: underline;
+  text-align: center;
+}
+.btn-block{
+  width: 100%;
+}
+.float-right{
+  float: right;
+}
+
 body {
   margin: 0;
   overflow: scroll;
-  text-align: center;
-  background-color: black;
-  color: green;
+  /*text-align: center;*/
   font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
     'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
     sans-serif;
@@ -14,8 +27,4 @@ body {
 code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
-}
-hr{
-  color: red;
-  margin: 40px;
 }
