--- a/src/css/apis.css
+++ b/src/css/apis.css
@@ -32,6 +32,28 @@ button{
     content: '';
     animation: look 2s ease infinite;
 }
+.contenedorTarjetas{
+    background-color: lightgreen;
+    border: 1px solid green;
+    border-radius: 20px;
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+}
+.tarjetaProducto{
+    background-color: rgb(243, 253, 242);
+    padding: 5px;
+    border-radius: 5px;
+    width: 200px;
+    height: 300px;
+    margin: 10px 0;
+    overflow: hidden;
+}
+.tarjetaProducto img{
+    width: 100%;
+    height: 100px;
+    object-fit: cover;
+}
 @keyframes look {
     0%{
         content: '';
